Change package name and fix generating openapi-doc/survey-openapi.yaml
